fix extra space

--- a/styles.scss
+++ b/styles.scss
@@ -246,7 +246,7 @@ main {
         .center-side {
           @include flex-center();
           position: relative;
-          bottom: 34%;
+          bottom: 33.2%;
 
           img {
             width: 62%;
